--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -4,7 +4,9 @@
 .headerContainer,
 .mainInnerContainer,
 .summaryContainer,
-.cardContainer {
+.cardContainer,
+.articleContainer,
+.footerContainer {
   padding: 0 rem(20);
 
   @include breakpoint(small) {
