--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -92,7 +92,8 @@
         flex-direction: row;
         text-align: left;
         align-items: flex-start;
-        gap: rem(30);
+        padding-left: rem(30);
+        gap: rem(80);
       }
 
       &__left {
@@ -102,6 +103,11 @@
           gap: rem(24);
           padding: 0;
           margin: 0;
+
+          > li:hover {
+            cursor: pointer;
+            color: var(--primary-limeGreen);
+          }
         }
       }
       &__right {
@@ -111,6 +117,10 @@
           gap: rem(24);
           padding: 0;
           margin: 0;
+          > li:hover {
+            cursor: pointer;
+            color: var(--primary-limeGreen);
+          }
         }
       }
     }
